--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "EFUPW\\FR\\": "src/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "~4.7"
     }
