Rebrand as HarptosDate
The API exposed by HarptosDateName turned out to be inadequate for
satisfying user needs without resorting to string parsing. In
preparation for a more suitable API, this commit renames the project to
HarptosDate.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "efupw/harptos-date-name",
-    "description": "Gets the Forgotten Realms Harptos-calendar date name of a day in a year.",
+    "name": "efupw/harptos-date",
+    "description": "Simple, immutable representation of a Forgotten Realms Calendar of Harptos date.",
     "license": "MIT",
     "autoload": {
         "psr-4": {
